Actualizacion programa04/index.html

--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa04/Index.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa04/Index.html
@@ -8,9 +8,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <!-- lineas de codigo para jalar las librerias de bootstrap, css y para mantener el estilo de la pagina,
+  cabe recalcar, que tienen que estar en el mismo orden que el de este programa, de lo contrario, no
+  adquirira el diseño deseado -->
     </head>
     <body>
         <nav class="navbar navbar-inverse">
+  <!-- Los nav son para temas de los botone, algo asi como el diseño de estos-->
             <div class="container-fluid">
                 <div class="nav-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -21,6 +25,8 @@
                     <a class="navbar-brand" href="">Inicio</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navCollapse">
+  <!-- el collapse, es cuando la ventana se minimiza, esto hace que los botones, o las opciones se
+  compacten -->
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="www.google.com">Control Escolar</a></li>
                         <li><a href="www.google.com">Alumnos</a></li>
