actualizacion programa05.html

--- a/TopicosAvanzados19A/public_html/JonathanEuan/programa05.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/programa05.html
@@ -3,10 +3,12 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
             <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
             <link type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
+<!-- lineas de codigo para las dataTables -->
       <script>
     $(document).ready(function() {
       $('#tableExample').DataTable();
     });
+    /* este es un ejemplo para poder seleccionar -->
       </script>
 
   </head>
