--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa05.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa05.html
@@ -6,7 +6,8 @@ Date:
 -->
 <html lang="en" dir="ltr">
   <head>
-    <!--Estilo de la tabal a usar -->  <link type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
+    <!--Estilo de la tabal a usar -->  
+    <link type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
