--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Progama04/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Progama04/index.html
@@ -2,13 +2,12 @@
 
 <!--
 Sours:          index.html
-Description:    Index del programa 4
+Description:    Barra de Navegacion de un index
 Date:           19/Febrero/2019
 -->
 
 <html>
-    <head>
-
+    <head>                                          <!-- liberias y estilos a usar-->
         <title>Index</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +16,8 @@ Date:           19/Febrero/2019
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
-    <body onload="alert('Bienvenido');"> 
-        <nav class="navbar navbar-inverse">
+    <body onload="alert('Bienvenido');">  <!-- Alerta de bienvenida -->
+        <nav class="navbar navbar-inverse">  <!-- barra de navegacion -->
             <div class="container-fluid">
                 <div class="nav-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -29,7 +28,7 @@ Date:           19/Febrero/2019
                     <a class="navbar-brand" href="">Inicio</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navCollapse">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav"> <!-- elementos dentro de la barra de navegacion -->
                         <li class="active"><a href="https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_portfolio&stacked=h">Control Escolar</a></li>
                         <li><a href="www.google.com">Alumnos</a></li>
                         <li><a href="www.google.com">Maestros</a></li>
