--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Programa01.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Programa01.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Sours:          Programa01.html
+Description:    Impreciones de Alerta
+Date:           12/Febrero/2019-->
+
 <html>
 <head>
   <title>PagJS</title>
@@ -7,6 +12,7 @@
   <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando-->
   <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
 </head>
-HolaMundo1
+HolaMundo1 <!-- Impresion de un titulo-->
 <body>
 </body>
+</html>
