--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Programa03.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Programa03.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 Sours:          Programa03.html
-Description:    Interfaces de formularios
+Description:    Utilizacion de inputs para la creacion de opciones para formularios
 Date:           14/Febrero/2019
 -->
 <html>
@@ -25,19 +25,19 @@ Date:           14/Febrero/2019
 
                     <input name="inputUsername" id = "inputUsername" type="text" size="20" placeholder="Ejemplo: Mickey" /><br>
 
-                    <input id = "radio1" name ="radio1" type="radio" value="1"> Chocolate<br>
+                    <input id = "radio1" name ="radio1" type="radio" value="1"> Chocolate<br> <!-- creacion de los espacios para seleccionar iun elemento -->
                     <input id = "radio2" name ="radio2" type="radio" value="1"> Helado<br>
                     <input id = "radio3" name ="radio3" type="radio" value="1"> Abrazos<br>
                     <input id = "radio4" name ="radio4" type="radio" value="1"> Sorpresa<br>
 
 
-                    <input type="number" min="1" max="20" /><br>
-                    <input type= "date"><br>
-                    <input type= "email"><br>
-                    <input type="color"><br>
-                    <input type="file"><br>
-                    <input type="password"><br>
-                    <input type="submit" value="Enviar Información" />
+                    <input type="number" min="1" max="20" /><br> <!--Contador que va del numero 1 al numero 20-->
+                    <input type= "date"><br> <!-- fechas -->
+                    <input type= "email"><br> <!-- para ingresar un email -->
+                    <input type="color"><br> <!-- Escojer un color -->
+                    <input type="file"><br> <!-- subir un domcumento o archivo -->
+                    <input type="password"><br> <!-- escribir una contraseña -->
+                    <input type="submit" value="Enviar Información" /> <!-- boton para enviar informacion-->
 
 
                 </form>
