--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -86,8 +86,8 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="https://es-la.facebook.com/pages/category/Middle-School/Colegio-del-Mayab-AC-1018589798154863/" ><img src="images/fb_logo.png" height="340"></a>
                                 <div class="text-content">
-                                    <h4>Awesome Note Book</h4>
-                                    <span>$18.00</span>
+                                    <h4>Facebook</h4>
+                                    <span>¡Danos like!</span>
                                 </div>
                             </div>
                         </div>
@@ -95,8 +95,8 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="https://twitter.com/adventistiad"><img src="images/tw_logo.png" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Antique Decoration Photo</h4>
-                                    <span>$27.00</span>
+                                    <h4>Twitter</h4>
+                                    <span>Follow Us</span>
                                 </div>
                             </div>
                         </div>
@@ -104,8 +104,8 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="https://www.interamerica.org/es/department/educacion/"><img src="images/ad.png" height="340"></a>
                                 <div class="text-content">
-                                    <h4>Work Hand Bag</h4>
-                                    <span>$36.00</span>
+                                    <h4>Iglesia Adventista Del Septimo dia</h4>
+                                    <span>Pagina Oficial</span>
                                 </div>
                             </div>
                         </div>
