--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Calificaciones.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Calificaciones.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<!-- codigo para generar un promedio de calificaciones usando un archivo js-->
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!--aqui llamamos al archivo de java script donde se pediran las calificaciones-->
     <script type="text/javascript" src="Calificaciones.js"> </script>
     <title></title>
   </head>
