--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Prograrma04/index.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Prograrma04/index.html
@@ -11,13 +11,16 @@ Date:           19/Febrero/2019
 
         <title>Index</title>
         <meta charset="UTF-8">
+        <!-- agregamos las configuraciones del boostrap-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
-    <body onload="alert('Bienvenido');"> 
+
+    <!--en este apartado agregamos el codigo que generara el menu de opciones-->
+    <body onload="alert('Bienvenido');">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="nav-header">
@@ -31,6 +34,8 @@ Date:           19/Febrero/2019
                 <div class="collapse navbar-collapse" id="navCollapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_portfolio&stacked=h">Control Escolar</a></li>
+
+<!-- aqui agregamos las opciones las cuales al ser seleccionadas nos enviaran a la ruta que se haya elejido-->
                         <li><a href="www.google.com">Alumnos</a></li>
                         <li><a href="www.google.com">Maestros</a></li>
                         <li><a href="www.google.com">Calificaciones</a></li>
