--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -370,14 +370,13 @@
 							<div class="col-lg-2 order-lg-1 order-2">
 								<div class="event_date d-flex flex-column align-items-center justify-content-center">
 									<div class="event_day">07</div>
-									<div class="event_month">January</div>
+									<div class="event_month">Mayo</div>
 								</div>
 							</div>
-
 							<div class="col-lg-6 order-lg-2 order-3">
 								<div class="event_content">
-									<div class="event_name"><a class="trans_200" href="#">Student Graduation Ceremony</a></div>
-									<div class="event_location">Grand Central Park</div>
+									<div class="event_name"><a class="trans_200" href="">Open House</a></div>
+									<div class="event_location">Colegio del Mayab</div>
 									<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor.</p>
 								</div>
 							</div>
@@ -459,9 +458,8 @@
 						<div class="footer_column_content">
 							<ul>
 								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
-								<li class="footer_list_item"><a href="#">Espacio 3</a></li>
+								<li class="footer_list_item"><a href="https://twitter.com/adventistiad">Twitter</a></li>
+								<li class="footer_list_item"><a href="https://www.interamerica.org/es/department/educacion/">Iglesia Adventista del Septimo Dia</a></li>
 							</ul>
 						</div>
 					</div>
