--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Programa03.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Programa03.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<!--
-
-  -->
+<!--Nombre: Francisco Montalvo Hidalgo
+Profesor:Melquizedec Moo Medina
+Programa: Inputs
+Fecha:14/feb/2019
+ -->
 <html lang="en" dir="ltr">
   <head>
 
@@ -18,7 +20,7 @@
       <header>
 
       </header>
-
+      <!--Se utilizan diferentes inputs para ver su funcionamiento-->
 
       <div id="divContenedor">
           <div id="divFormulario"> <!--Formulario-->
