--- a/TopicosAvanzados19A/public_html/FrankMontalvo/programm04/index.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/programm04/index.html
@@ -4,9 +4,14 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+<!--Nombre: Francisco Montalvo Hidalgo
+Profesor:Melquizedec Moo Medina
+Programa: NavBar
+Fecha:19/feb/2019
+ -->
 <html>
     <head>
-
+      <!--Se utilizan librerias de bootstrap para dar formato a la nav bar-->
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +21,7 @@ and open the template in the editor.
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
     <body>
+      <!--Las clases utilizadas son de booststrap para poder dar un formato "bonito" a la nav bar-->
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="nav-header">
@@ -27,13 +33,14 @@ and open the template in the editor.
                     <a class="navbar-brand" href="">Inicio</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navCollapse">
+                  <!--Se utiliza una lista no ordenada para colocar los elementos en el navBar -->
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="www.google.com">Control Escolar</a></li>
                         <li><a href="www.google.com">Alumnos</a></li>
                         <li><a href="www.google.com">Maestros</a></li>
                         <li><a href="www.google.com">Calificaciones</a></li>
                         <li><a href="www.google.com">Horarios</a></li>
-                    </ul>  
+                    </ul>
                 </div>
             </div>
         </nav>
