--- a/TopicosAvanzados19A/public_html/FrankMontalvo/program02/program02.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/program02/program02.html
@@ -4,11 +4,16 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+<!--Nombre: Francisco Montalvo Hidalgo
+Profesor:Melquizedec Moo Medina
+Programa: Promedio de calificaciones
+Fecha:12/feb/2019
+ -->
 <html>
-    <head>   
+    <head>
         <title> PROMEDIOS CALIFICACIONES </title>
 
-
+        <!--Se utiliza el script desde un archivo externo-->
         <script type='text/javascript' src='program02.js'></script>
 
     </head>
