--- a/TopicosAvanzados19A/public_html/KennAyala/MiPagina.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/MiPagina.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PagJS</title>
+<head>
+<title>PagJS</title>
 
-        <script>alert("HolaMundo desde SCript")</script> <!-- código directo -->
-        <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando-->
-        <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
-    </head>
-    <body>
-        HolaMundo
-
-    </body>
+<script>
+	alert("HolaMundo desde SCript")
+</script>
+<!-- código directo -->
+<script type='text/javascript'>
+	alert("HolaMundo desde TYPE")
+</script>
+<!-- especificando-->
+<script type='text/javascript' src='codigoJS.js'></script>
+<!-- llamando archivo-->
+</head>
+<body>HolaMundo
+</body>
