--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -135,25 +135,24 @@
 
 	</div>
 
-	<div class="hero_boxes">
-		<div class="hero_boxes_inner">
-			<div class="container">
-				<div class="row">
-
-					<div class="col-lg-4" align-content="center">
-						<div class="hero_box d-flex flex-row align-items-center justify-content-star">
-							<img src="images/earth-globe.svg" class="svg" alt="">
-							<div class="hero_box_content">
-								<h2 class="hero_box_title">Inscripciones</h2>
-								<a href="#" class="hero_box_link" onclick="alert('Estamos trabajando en ello!!')">ver más</a>
+		<div class="hero_boxes">
+			<div class="hero_boxes_inner">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="hero_box d-flex flex-row align-items-center justify-content-star">
+								<img src="images/earth-globe.svg" class="svg" alt="">
+								<div class="hero_box_content">
+									<h2 class="hero_box_title">Inscripciones</h2>
+									<a href="#" class="hero_box_link" onclick="alert('Estamos trabajando en ello!!')">ver más</a>
+								</div>
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
-	</div>
+
 
 	<!-- Services -->
 
