--- a/TopicosAvanzados19A/public_html/JuanMezquita/Programa01.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Programa01.html
@@ -7,6 +7,6 @@
   <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando-->
   <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
 </head>
-HolaMundo1
+HolaMundo
 <body>
 </body>
