--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa02.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa02.html
@@ -1,7 +1,19 @@
 <html>
-<head>
-    <script type="text/javascript" src="Programa02.js"></script>
+    <head>
+        <title> PROMEDIOS CALIFICACIONES </title>
+
+        <!--Se utiliza el script desde un archivo externo-->
+        <script type='text/javascript' src='program02.js'></script>
+
     </head>
     <body>
+        <div id="divGrupo">
+            <form>
+                <input type="number" id="inputGrupo" min="1" max="100">
+                <button id="buttonGrupo" onclick="leerCalificaciones()">Agregar</button>
+            </form>
+        </div>
     </body>
-    </html>
+
+
+</html>
