--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa02/Programa02.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa02/Programa02.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Source: Programa3newhtml.html
+Source: Programa02.html
 Description: como crear un boton y utilizarlo en una funcion.
 Date: 14/02/19
 -->
