--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa4/public_html/Programa04.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa4/public_html/Programa04.html
@@ -9,10 +9,13 @@ Date: 21/02/19
         <title>Programa04</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Librerias de bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+           <!--Script en el cual se implementan las librerias de bootstrap para los botones especiales-->
 </head>
+<!--Agrego una imagen de fondo y se adapta al navegador predeterminado-->
 <body style="background-image:url('wp1913659.jpg'); -webkit-background-size: cover;">
     
 	<nav class="navbar navbar-inverse">
@@ -25,6 +28,7 @@ Date: 21/02/19
 			</button>
 			<a class="navbar-brand" href="">Inicio</a>
 			</div>
+                    <!--en el <a href> se guarda los enlaces a las pag. a uilizar-->
 			<div class="collapse navbar-collapse" id="navCollapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="http://www.google.com">Google</a></li>
@@ -39,7 +43,6 @@ Date: 21/02/19
 			</div>
 		</div>
 	</nav>
-
 	<div></div>
 	<div></div>
 	<div></div>
