se agrego ventas al proyecto integrador

--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa05/public_html/Programa05.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa05/public_html/Programa05.html
@@ -9,7 +9,8 @@ Date: 21/02/19
 <!--Librerias de bootstrap -->
     <script type="text/javascript" src="http<!s://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <link type="text/CSS" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
+    <link type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="CSS/estilo.css">
     <!--Script en el cual se implementan las librerias de bootstrap para la tabla-->
     <script type="text/javascript">
     $(document).ready(function() {
