--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/login.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/login.html
@@ -34,7 +34,7 @@
 			<div class="wrap-login100 p-t-85 p-b-20">
 				<form class="login100-form validate-form">
 					<span class="login100-form-title p-b-70">
-						Welcome
+						Bienvenidos
 					</span>
 					<span class="login100-form-avatar">
 						<img src="images/logo2.png" alt="AVATAR">
