--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -5,7 +5,10 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js"> <!--<![endif]-->
 <head>
-    <title>Bienvenidos</title>
+    <title>Bienvenidos
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </title>
 
     <!-- meta -->
     <meta charset="utf-8">
@@ -46,9 +49,6 @@
             </a></div>
 
             <ul class="nav navbar-nav navbar-right">
-
-                <li><a hrfe="#Administracion">Administracion</a></li>
-
                 <!--fix for scroll spy active menu element-->
                 <li style="display:none;"><a href="#header"></a></li>
 
@@ -64,6 +64,7 @@
                 <h1 class="">La Lupita</h1>
             </div>
             <div class="subtitle"><h4>Bar Restaurant</h4></div>
+<button color:"green" onclick="location.href='file:///C:/Users/denil/github/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html?#'">Administración</button>
         </div>
         <div class="bottom text-center">
             <a id="scrollDownArrow" href="#"><i class="fa fa-chevron-down"></i></a>
