--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html
@@ -32,7 +32,7 @@
     					<a href="#" style="float:right;font-size:12px;">¿Olvidasate tu contraseña?</a>
     					<input type="password" class="form-control form-control-sm-10" id="exampleInputPassword1">
     				</div>
-    				<button type="submit" class="btn btn-primary btn-block">Iniciar</button>
+    				<button onclick="location.href='file:///C:/Users/denil/github/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html?#'" type="submit" class="btn btn-primary btn-block">Iniciar</button>
 
     			</form>
     		</div>
