--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html
@@ -4,13 +4,9 @@
 
     <title>Aministracion</title>
   </head>
-  <body background="C:\Users\Lenovo\Documents\Restaurant.jpg"  height="100%" width="100%" >
+  <body background="11253228_848256938575763_8141838970849982173_n.jpg"  height="100%" width="100%" >
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-
-
 
     <div class="global-container col-sm-5">
     	<div class="card login-form">
@@ -32,7 +28,10 @@
     					<a href="#" style="float:right;font-size:12px;">¿Olvidasate tu contraseña?</a>
     					<input type="password" class="form-control form-control-sm-10" id="exampleInputPassword1">
     				</div>
-    				<button type="submit"class="btn btn-primary btn-block" onclick="location.href='Productos.html'">Ingresar</button>
+
+            <a href="C:/Users/Lenovo/github/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa06.html" target="_blank">Ingresar</a>
+
+
 
     			</form>
     		</div>
