--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -138,7 +138,7 @@
 
 
 	<!-- Services -->
-
+<center>
 	<div class="services page_section">
 
 		<div class="container">
@@ -177,6 +177,7 @@
 					<p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum.</p>
 				</div>
 
+
 				<div class="col-lg-4 service_item text-left d-flex flex-column align-items-start justify-content-start">
 					<div class="icon_container d-flex flex-column justify-content-end">
 						<img src="images/professor.svg" alt="">
@@ -190,7 +191,7 @@
 			</div>
 		</div>
 	</div>
-
+</center>
 	<!-- Testimonials -->
 
 	<div class="testimonials page_section">
