--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
         <link rel="stylesheet" href="css/hero-slider.css">
-        <link rel="stylesheet" href="css/templatemo-main.css">
+        <link rel="stylesheet" href="css/templatemo2-main.css">
         <link rel="stylesheet" href="css/owl-carousel.css">
 				<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 				<link href="plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" rel="stylesheet" type="text/css">
@@ -37,6 +37,7 @@ https://templatemo.com/tm-526-vanilla
             <li class="nav-item"><a class="nav-link" href="#home"><span>Intro</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#services"><span>Ubicacion</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Redes Sociales</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#mensaje"><span>Evianos Un Mensaje</span></a></li>
             </ul>
     </div>
 
@@ -116,7 +117,7 @@ https://templatemo.com/tm-526-vanilla
     </div>
 
 
-    <div class="tabs-content" id="our-story">
+    <div class="tabs-content" id="mensaje">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
