--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
@@ -13,6 +13,10 @@
         <link rel="stylesheet" href="css/hero-slider.css">
         <link rel="stylesheet" href="css/templatemo-main.css">
         <link rel="stylesheet" href="css/owl-carousel.css">
+        <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
+        <link href="plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="styles/contact_styles.css">
+        <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
@@ -87,7 +91,7 @@ El creacionismo es una corriente de estudios interdisciplinarios que tratan de
                 <div class="col-md-12">
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
-                            
+
                         </div>
 
                     </div>
@@ -143,13 +147,7 @@ El creacionismo es una corriente de estudios interdisciplinarios que tratan de
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-
-            </div>
-        </div>
-    </footer>
+    
 
 
 
@@ -195,6 +193,69 @@ El creacionismo es una corriente de estudios interdisciplinarios que tratan de
           });
         });
     </script>
+
+    <!-- Footer -->
+
+    <footer class="footer">
+      <div class="container">
+
+        <!-- Footer Content -->
+
+        <div class="footer_content">
+          <div class="row">
+
+            <!-- Footer Column - About -->
+
+            <div class="col-lg-3 footer_col">
+
+              <!-- Logo -->
+
+              <div class="logo_container">
+                <div class="logo">
+                  <img src="images/logo1.png" alt="">
+                  <span>Colegio del Mayab A.C.</span>
+                </div>
+              </div>
+
+            </div>
+
+
+            <!-- Footer Column - Contact -->
+
+            <div class="col-lg-3 footer_col">
+              <div class="footer_column_content">
+                <ul>
+                  <li class="footer_contact_item">
+                    <div class="footer_contact_icon">
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Footer Copyright -->
+
+        <div class="footer_bar d-flex flex-column flex-sm-row align-items-center">
+          <div class="footer_copyright">
+            <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
+          </div>
+          <div class="footer_social ml-sm-auto">
+            <ul class="menu_social">
+              <!--<li class="menu_social_item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
+              <li class="menu_social_item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              <li class="menu_social_item"><a href="#"><i class="fab fa-instagram"></i></a></li> -->
+              <li class="menu_social_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="menu_social_item"><a href="https://twitter.com/adventistiad"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </footer>
 
 
 </body>
