--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/nosotros.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-526-vanilla
 
     <div class="service-content" id="services">
 
-                      <h4>Educación Adventista</h4>
+                      <h4 style="color:black">Educación Adventista</h4>
                 <p><b>La Red de Educación Adventista es administrada por la Iglesia Adventista del Séptimo Día y está presente en más de 150 países con cerca de 1,5 millones de estudiantes. En América del Sur, hay más de 270.000 estudiantes en 871 instituciones educativas (escuelas, colegios y universidades) y más de 18 mil profesores.
 
 La educación adventista transmite no solo conocimiento académico,
@@ -68,7 +68,7 @@ educación se fundamenta en Cristo, por lo que los adventistas creen que bajo
   de una vida de fe en Dios
  y respeto por la dignidad de todos los seres humanos.
 </b>  </p>
-                  <h4>El Creacionismo y la Educación Adventista</h4>
+                  <h4 style="color:black">El Creacionismo y la Educación Adventista</h4>
 <p><b>
 ¿Por qué enseñar el creacionismo?
 
@@ -147,7 +147,7 @@ El creacionismo es una corriente de estudios interdisciplinarios que tratan de
         </div>
     </div>
 
-    
+
 
 
 
