Correccion de errores

--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html
@@ -7,20 +7,18 @@
   <body background="11253228_848256938575763_8141838970849982173_n.jpg"  height="100%" width="100%" >
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    <div class="global-container col-sm-5">
-    	<div class="card login-form">
+    <div class="global-container col-sm-12" align="center" >
+    	<div class="card login-form col-sm-5">
     	<div class="card-body">
     		<h3 class="card-title text-center">Edicion de menu</h3>
     		<div class="card-text">
-
           </div>
     			<!--
     			<div class="alert alert-danger alert-dismissible fade show" role="alert">Incorrect username or password.</div> -->
     			<form>
     				<!-- to error: add class "has-danger" -->
     				<div class="form-group">
-    					<label for="exampleInputEmail1">Nombre de ususario</label>
+    					<label for="exampleInputEmail1" >Nombre de ususario</label>
     					<input type="email" class="form-control form-control-sm-10" id="exampleInputEmail1" aria-describedby="emailHelp">
     				</div>
     				<div class="form-group">
