--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -64,7 +64,7 @@
                 <h1 class="">La Lupita</h1>
             </div>
             <div class="subtitle"><h4>Bar Restaurant</h4></div>
-<button color:"green" onclick="location.href='../Sesion.html?#'">Administración</button>
+<button onclick="location.href='file:///C:/Users/denil/github/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Denilson_Osorio/Sesion.html?#'">Administración</button>
         </div>
         <div class="bottom text-center">
             <a id="scrollDownArrow" href="#"><i class="fa fa-chevron-down"></i></a>
