--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -32,7 +32,7 @@ https://templatemo.com/tm-526-vanilla
 -->
 <body>
 
-    <div class="fixed-side-navbar"> <!-- Barra de navegacion espacio derecho -->
+    <div class="fixed-side-navbar">
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="#home"><span>Intro</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#services"><span>Ubicacion</span></a></li>
@@ -41,13 +41,13 @@ https://templatemo.com/tm-526-vanilla
             </ul>
     </div>
 
-    <div class="parallax-content baner-content" id="home"> <!-- Encabezado -->
+    <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="first-content">
                 <h1>¡Contactanos!</h1>
 
 
-                <div class="primary-button">  <!-- Botones primarios de inicio -->
+                <div class="primary-button">
                     <a href="index.html">Ir a Inicio</a>
 		                <a href="mailto:recepcioncolmay@hotmail.com?subject=feedback">Contacto</a>
                 </div>
@@ -59,7 +59,7 @@ https://templatemo.com/tm-526-vanilla
 
 
 
-    <div class="service-content" id="services"><!-- Ubicacion -->
+    <div class="service-content" id="services">
 									<center>
 										<div class="contact_form">
 											<div class="contact_title">Ubicacion</div>
@@ -78,7 +78,7 @@ https://templatemo.com/tm-526-vanilla
 
 
 
-    <div class="parallax-content projects-content" id="portfolio"> <!-- Apartado de redes sociales  -->
+    <div class="parallax-content projects-content" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -117,7 +117,7 @@ https://templatemo.com/tm-526-vanilla
     </div>
 
 
-    <div class="tabs-content" id="mensaje">  <!-- Formulario de envio de correo -->
+    <div class="tabs-content" id="mensaje">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
@@ -133,7 +133,7 @@ https://templatemo.com/tm-526-vanilla
 															<input id="contact_form_name" class="input_field contact_form_name" type="text" placeholder="Nombre" required="required" data-error="Ingresa un nombre">
 															<input id="contact_form_email" class="input_field contact_form_email" type="email" placeholder="E-mail" required="required" data-error="E-mail invalido">
 															<textarea id="contact_form_message" class="text_field contact_form_message" name="message" placeholder="Mensaje" required="required" data-error="Por favor, escribe un mansaje"></textarea>
-															<button id="contact_send_btn" type="button" class="contact_send_btn trans_200"  onclick="alert('Estamos trabajando en ello!!')" value="Submit">ENVIAR</button> <!--  Alerta de trabajo-->
+															<button id="contact_send_btn" type="button" class="contact_send_btn trans_200"  onclick="alert('Estamos trabajando en ello!!')" value="Submit">ENVIAR</button>
 														</form>
 													</div>
 												</div>
@@ -148,7 +148,6 @@ https://templatemo.com/tm-526-vanilla
     </div>
 
 
-        <!--Scrol de navegacion animado-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
@@ -207,7 +206,7 @@ https://templatemo.com/tm-526-vanilla
 
 						<div class="col-lg-3 footer_col">
 
-							<!-- Logo de footer-->
+							<!-- Logo -->
 
 							<div class="logo_container">
 								<div class="logo">
@@ -242,8 +241,6 @@ https://templatemo.com/tm-526-vanilla
 	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
 					</div>
-
-          <!-- Botones de footer redes sociales-->
 					<div class="footer_social ml-sm-auto">
 						<ul class="menu_social">
 							<!--<li class="menu_social_item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
