--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
@@ -3,7 +3,7 @@
 <!--Francisco Montalvo-->
 <!-- Cosme Magaña-->
 <!-- Pagina proyecto de unidad, seccion Acerca de Nosotros-->
-<!--Plantilla:Vanilla-->
+<!--Plantilla:Vanilla Autor:TemplateMO-->
 
 
 <html>
