--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Proyecto_Topicos/index.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Proyecto_Topicos/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!--
+Authors: Francisco Montalvo
+Jesus Lira
+Cosme Magaña
+Author of template: Colorlib
+Description: Este es un pequeño index con el que se piensa mostrar
+información breve sobre la escuela, algunos eventos
+ y tiene acceso a los demas elementos del programa.
+-->
 <html lang="en">
 <head>
 <title>Colegio del Mayab A.C.</title>
