--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Proyecto_Topicos/nosotros.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Proyecto_Topicos/nosotros.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+Authors: Francisco Montalvo
+Jesus Lira
+Cosme Magaña
+Author of template: Template Mo
+Description: En esta sección hay información acerca de los principios de la escuela
+-->
 <html>
     <head>
         <meta charset="utf-8">
