--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/contact.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+Authors: Francisco Montalvo
+Jesus Lira
+Cosme Magaña
+Author of template: Template Mo
+Description: En esta parte se muestra información acerca de como contactar a la escuela
+-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -62,7 +69,7 @@ https://templatemo.com/tm-526-vanilla
     <div class="service-content" id="services"><!-- Ubicacion -->
 									<center>
 										<div class="contact_form">
-											<div class="contact_title">Ubicacion</div>
+											<div class="contact_title" style="color:white">Ubicacion</div>
 										</div>
 											<div class="row">
 												<div class="col">
