--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Proyecto_Topicos/contact.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Proyecto_Topicos/contact.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+Authors: Francisco Montalvo
+Jesus Lira
+Cosme Magaña
+Author of template: Template Mo
+Description: En esta parte se muestra información acerca de como contactar a la escuela
+-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -32,7 +39,7 @@ https://templatemo.com/tm-526-vanilla
 -->
 <body>
 
-    <div class="fixed-side-navbar">
+    <div class="fixed-side-navbar"> <!-- Barra de navegacion espacio derecho -->
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="#home"><span>Intro</span></a></li>
             <li class="nav-item"><a class="nav-link" href="#services"><span>Ubicacion</span></a></li>
@@ -41,13 +48,13 @@ https://templatemo.com/tm-526-vanilla
             </ul>
     </div>
 
-    <div class="parallax-content baner-content" id="home">
+    <div class="parallax-content baner-content" id="home"> <!-- Encabezado -->
         <div class="container">
             <div class="first-content">
                 <h1>¡Contactanos!</h1>
 
 
-                <div class="primary-button">
+                <div class="primary-button">  <!-- Botones primarios de inicio -->
                     <a href="index.html">Ir a Inicio</a>
 		                <a href="mailto:recepcioncolmay@hotmail.com?subject=feedback">Contacto</a>
                 </div>
@@ -59,10 +66,10 @@ https://templatemo.com/tm-526-vanilla
 
 
 
-    <div class="service-content" id="services">
+    <div class="service-content" id="services"><!-- Ubicacion -->
 									<center>
 										<div class="contact_form">
-											<div class="contact_title">Ubicacion</div>
+											<div class="contact_title" style="color:white">Ubicacion</div>
 										</div>
 											<div class="row">
 												<div class="col">
@@ -78,7 +85,7 @@ https://templatemo.com/tm-526-vanilla
 
 
 
-    <div class="parallax-content projects-content" id="portfolio">
+    <div class="parallax-content projects-content" id="portfolio"> <!-- Apartado de redes sociales  -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -117,7 +124,7 @@ https://templatemo.com/tm-526-vanilla
     </div>
 
 
-    <div class="tabs-content" id="mensaje">
+    <div class="tabs-content" id="mensaje">  <!-- Formulario de envio de correo -->
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
@@ -133,7 +140,7 @@ https://templatemo.com/tm-526-vanilla
 															<input id="contact_form_name" class="input_field contact_form_name" type="text" placeholder="Nombre" required="required" data-error="Ingresa un nombre">
 															<input id="contact_form_email" class="input_field contact_form_email" type="email" placeholder="E-mail" required="required" data-error="E-mail invalido">
 															<textarea id="contact_form_message" class="text_field contact_form_message" name="message" placeholder="Mensaje" required="required" data-error="Por favor, escribe un mansaje"></textarea>
-															<button id="contact_send_btn" type="button" class="contact_send_btn trans_200"  onclick="alert('Estamos trabajando en ello!!')" value="Submit">ENVIAR</button>
+															<button id="contact_send_btn" type="button" class="contact_send_btn trans_200"  onclick="alert('Estamos trabajando en ello!!')" value="Submit">ENVIAR</button> <!--  Alerta de trabajo-->
 														</form>
 													</div>
 												</div>
@@ -148,6 +155,7 @@ https://templatemo.com/tm-526-vanilla
     </div>
 
 
+        <!--Scrol de navegacion animado-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
@@ -206,7 +214,7 @@ https://templatemo.com/tm-526-vanilla
 
 						<div class="col-lg-3 footer_col">
 
-							<!-- Logo -->
+							<!-- Logo de footer-->
 
 							<div class="logo_container">
 								<div class="logo">
@@ -241,6 +249,8 @@ https://templatemo.com/tm-526-vanilla
 	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
 					</div>
+
+          <!-- Botones de footer redes sociales-->
 					<div class="footer_social ml-sm-auto">
 						<ul class="menu_social">
 							<!--<li class="menu_social_item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
