--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/nosotros.html
@@ -103,7 +103,7 @@ El creacionismo es una corriente de estudios interdisciplinarios que tratan de
         </div>
     </div>
 
-<!-- Imagenes del menu inferior-->
+<!-- Imagenes del menu inferior.-->
     <div class="tabs-content" id="our-story">
         <div class="container">
             <div class="row">
