ahora si el ultimo commit

--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Proyecto_Topicos/nosotros.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Proyecto_Topicos/nosotros.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
-<!--Jesus Lira-->
-<!--Francisco Montalvo-->
-<!-- Cosme Magaña-->
-<!-- Pagina proyecto de unidad, seccion Acerca de Nosotros-->
-<!--Plantilla:Vanilla Autor:TemplateMO-->
+<!--
+Authors: Francisco Montalvo
+Jesus Lira
+Cosme Magaña
+Author of template: Template Mo
+Description: En esta sección hay información acerca de los principios de la escuela
+-->
 
 
 <html>
